--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -3,11 +3,39 @@ templateKey: practice-page
 title: 1-2-4-All
 subtitle: Tap into the wisdom of crowds
 date: 2022-05-17T15:21:44.547Z
-authors: []
+authors:
+  - mattnapro
+tags:
+  - methods
 mobiusTag: foundation
-icon: https://github.com/openpracticelibrary/opl-media/blob/master/images/Needs%20an%20Image.png?raw=true
-whatIs: "123"
-whyDo: "123"
-howTo: "123"
+icon: https://nanadia.files.wordpress.com/2018/10/blog-119-8-10-19-ls-1-2-4-all.jpg
+whatIs: 1-2-4-All is a method for engaging all members of a large group
+  simultaneously to generate ideas together.  This method is highly scalable and
+  can be used for almost any group size.
+whyDo: >-
+  * All voices are heard, incorporating “silent” conversations and expanding
+  input diversity
+
+  * Broad engagement naturally improves consensus and shared understanding
+
+  * Iterative feedback improves outcomes
+howTo: >-
+  1. Facilitator asks a question in response to the presentation of an issue, or
+  about a problem to resolve or a proposal put forward (e.g., What opportunities
+  do YOU see for making progress on this challenge? How would you handle this
+  situation? What ideas or actions do you recommend?)
+
+  2. Individuals self-reflect on the shared challenge \[1 min.]
+
+  3. Individuals pair up to generate ideas in pairs, building on ideas from self-reflection. \[2 min.]
+
+  4. Pairs group into foursomes to share and develop ideas from each pair. \[4 min.]
+
+  5. Repeat cycle as needed.
+
+  6. Pull the entire group together to share and develop a common idea. \[5 min.]
+people: 8+
+time: 15 - 30 minutes
+difficulty: easy
 participants: []
 ---
