Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -20,10 +20,10 @@ whyDo: >-
 
   * Iterative feedback improves outcomes
 howTo: >-
-  1. Facilitator asks a question in response to the presentation of an issue, or
-  about a problem to resolve or a proposal put forward (e.g., What opportunities
-  do YOU see for making progress on this challenge? How would you handle this
-  situation? What ideas or actions do you recommend?)
+  1. The facilitator asks a question in response to the presentation of an
+  issue, or about a problem to resolve or a proposal put forward (e.g., What
+  opportunities do YOU see for making progress on this challenge? How would you
+  handle this situation? What ideas or actions do you recommend?)
 
   2. Individuals self-reflect on the shared challenge \[1 min.]
 
@@ -33,7 +33,11 @@ howTo: >-
 
   5. Repeat cycle as needed.
 
-  6. Pull the entire group together to share and develop a common idea. \[5 min.]
+  6. The facilitator pulls the entire group together to share and develop a common idea. \[5 min.]
+resources:
+  - link: https://www.liberatingstructures.com/1-1-2-4-all/
+    linkType: web
+    description: "Liberating Structures: 1-2-4-All"
 people: 8+
 time: 15 - 30 minutes
 difficulty: easy
