Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -34,6 +34,8 @@ howTo: >-
   5. Repeat cycle as needed.
 
   6. The facilitator pulls the entire group together to share and develop a common idea. \[5 min.]
+mediaGallery:
+  - link: https://www.liberatingstructures.com/1-1-2-4-all/
 resources:
   - link: https://www.liberatingstructures.com/1-1-2-4-all/
     linkType: web
