Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -35,7 +35,7 @@ howTo: >-
 
   6. The facilitator pulls the entire group together to share and develop a common idea. \[5 min.]
 mediaGallery:
-  - link: https://www.liberatingstructures.com/1-1-2-4-all/
+  - link: https://nanadia.files.wordpress.com/2018/10/blog-119-8-10-19-ls-1-2-4-all.jpg
 resources:
   - link: https://www.liberatingstructures.com/1-1-2-4-all/
     linkType: web
