Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -9,9 +9,14 @@ tags:
   - methods
 mobiusTag: foundation
 icon: https://nanadia.files.wordpress.com/2018/10/blog-119-8-10-19-ls-1-2-4-all.jpg
-whatIs: 1-2-4-All is a method for engaging all members of a large group
-  simultaneously to generate ideas together.  This method is highly scalable and
-  can be used for almost any group size.
+whatIs: >-
+  1-2-4-All is a method for engaging all members of a large group simultaneously
+  to generate ideas together.  
+
+
+
+
+  This method is highly scalable and can be used for almost any group size.
 whyDo: >-
   * All voices are heard, incorporating “silent” conversations and expanding
   input diversity
@@ -20,10 +25,10 @@ whyDo: >-
 
   * Iterative feedback improves outcomes
 howTo: >-
-  1. The facilitator asks a question in response to the presentation of an
-  issue, or about a problem to resolve or a proposal put forward (e.g., What
-  opportunities do YOU see for making progress on this challenge? How would you
-  handle this situation? What ideas or actions do you recommend?)
+  1. The facilitator asks a question about an issue,  problem to resolve, or a
+  proposal to put forward (*e.g., What opportunities do YOU see for making
+  progress on this challenge? How would you handle this situation? What ideas or
+  actions do you recommend?*)
 
   2. Individuals self-reflect on the shared challenge \[1 min.]
 
