Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -8,7 +8,7 @@ authors:
 tags:
   - methods
 mobiusTag: foundation
-icon: https://nanadia.files.wordpress.com/2018/10/blog-119-8-10-19-ls-1-2-4-all.jpg
+icon: /images/1-2-4-all.jpg
 whatIs: >-
   1-2-4-All is a method for engaging all members of a large group simultaneously
   to generate ideas together.
@@ -39,6 +39,9 @@ howTo: >-
   5. Repeat cycle as needed.
 
   6. The facilitator pulls the entire group together to share and develop a common idea. \[5 min.]
+
+
+  image: [Nadia von Holzen](https://learning-moments.net/2018/10/08/the-power-of-the-little-liberating-structure-1-2-4-all/)
 mediaGallery:
   - link: https://nanadia.files.wordpress.com/2018/10/blog-119-8-10-19-ls-1-2-4-all.jpg
 resources:
