--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -19,7 +19,7 @@ whatIs: >-
   This method is highly scalable and can be used for almost any group size.
 whyDo: >-
   * All voices are heard, incorporating “silent” conversations and expanding
-  input diversity
+  input diversity (no HPPO effect!)
 
   * Broad engagement naturally improves consensus and shared understanding
 
