Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -48,6 +48,9 @@ resources:
   - link: https://www.liberatingstructures.com/1-1-2-4-all/
     linkType: web
     description: "Liberating Structures: 1-2-4-All"
+  - link: https://www.lucidmeetings.com/glossary/1-2-all
+    linkType: web
+    description: Meeting school glossary
 people: 8+
 time: 15 - 30 minutes
 difficulty: easy
