--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -43,6 +43,7 @@ howTo: >-
 
   image: [Nadia von Holzen](https://learning-moments.net/2018/10/08/the-power-of-the-little-liberating-structure-1-2-4-all/)
 mediaGallery:
+  - link: https://www.youtube.com/watch?v=El12QyNfrSA&t=32s
   - link: https://nanadia.files.wordpress.com/2018/10/blog-119-8-10-19-ls-1-2-4-all.jpg
 resources:
   - link: https://www.liberatingstructures.com/1-1-2-4-all/
