Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -52,6 +52,9 @@ resources:
   - link: https://www.lucidmeetings.com/glossary/1-2-all
     linkType: web
     description: Meeting school glossary
+  - link: https://delivervalue.uk/timer/
+    linkType: web
+    description: A handy timer to guide the practice
 people: 8+
 time: 15 - 30 minutes
 difficulty: easy
