Update Practice “10-for-10”

--- a/src/pages/practice/10-for-10.md
+++ b/src/pages/practice/10-for-10.md
@@ -59,7 +59,7 @@ howTo: >-
 
   6. G﻿ive people 10 votes in the form of sticky dots
 
-  7. G﻿ive people appropriate time to vote (the more sticky notes the more time is required)
+  7. G﻿ive the participants 3 minutes to vote (ie stick sticky dots on sticky notes)
 
   8. Re-order the sticky notes by votes
 
