Update Practice “1-2-4-all”

--- a/src/pages/practice/1-2-4-all.md
+++ b/src/pages/practice/1-2-4-all.md
@@ -9,14 +9,9 @@ tags:
   - methods
 mobiusTag: foundation
 icon: /images/1-2-4-all.jpg
-whatIs: >-
-  1-2-4-All is a method for engaging all members of a large group simultaneously
-  to generate ideas together.
-
-
-
-
-  This method is highly scalable and can be used for almost any group size.
+whatIs: 1-2-4-All is a way for every member of a large group to participate and
+  generate ideas together. It is highly scalable and can be used for almost any
+  group size.
 whyDo: >-
   * All voices are heard, incorporating “silent” conversations and expanding
   input diversity - No more HiPPOs (Highest Paid Person’s Opinion)!
