testing using search tags for additional feature to website

--- a/src/pages/practice/10-for-10.md
+++ b/src/pages/practice/10-for-10.md
@@ -7,6 +7,7 @@ authors:
   - julieta-varsano
 tags:
   - ideate
+searchTag: ["community", "number based"]
 mobiusTag: options
 icon: /images/10-for-10-by-aj-smart-1-.jpg
 whatIs: "One of the most common types of workshops that every designer, PM or
